--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "event-steam": "3.3.6",
     "mongoose": "^5.0.1"
   }
 }
