--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "event-steam": "^3.3.6",
+    "flatmap-stream": "^0.0.1",
     "mongoose": "^5.0.1"
   }
 }
